--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  font-family: Poppins, sans-serif;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color-scheme: light dark; */
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,3 +17,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.main-dashboard {
+  display: grid;
+  grid-template-columns: 180px 2fr 1fr;
+  gap: 20px;
+  
+}
+
+.main-dashboard .section1 {
+  grid-column: 2;
+  padding-left: 50px;
+  padding-top: 50px;
+
+}
+
+.homepage {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+}
