--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -1,16 +1,25 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+.container {
+  display:grid;
+  width: 100%;
+  float: left;
+  height: 100%;
+  grid-template-columns: 180px 1fr;
+  gap: 32px;
+}
 
 .sidebar {
     display: grid;
-    grid-template-rows: 80px 1fr;
+    grid-template-rows: 80px 1fr 80px;
     font-family: Poppins;
     height: 100%;
     width: 180px;
-    position: fixed;
-    z-index: 1;
+    z-index: 10;
     overflow-x: hidden;
     border: 1px solid #8c92e0;
+    background-color: white;
+    
   }
   
   .sidebar a {
@@ -62,6 +71,14 @@
   
   .chatSupport {
     border: 1px solid #8c92e0;
-  
   }
   
+  .dashboard_main_container {
+    position:relative;
+    /* margin-left: 180px; */
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    float:right;
+    grid-column: 2;
+  }
