--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -1,24 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 .container {
-  display:grid;
+  display:flex;
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   grid-template-columns: 180px 1fr;
-  gap: 32px;
+  background-color: var(--Neutral-100);
 }
 
 .sidebar {
+    position: relative;
     display: grid;
     grid-template-rows: 80px 1fr 80px;
     font-family: Poppins;
-    height: 100%;
-    width: 180px;
+    height: 100vh;
+    width: 250px;
     z-index: 10;
     overflow-x: hidden;
-    border: 1px solid #8c92e0;
     background-color: white;
-    
+    border-radius: 10px;
   }
   
   .sidebar a {
@@ -38,16 +38,25 @@
       display: none;
     }
   }
+
+  .navimg {
+    padding-top: 80%;
+  }
   
   .brand {
+    display: flex;
     height: 65px;
     box-shadow: 0em 0.2em .5em #8c92e0;
-    border: 1px solid #8c92e0;
+    text-align: center;
+    align-items: center;
+    font-family: Poppins, sans-serif;
+    font-weight: bold;
+    color: #10215F;
   }
   
   .brand img {
     height: 60px;
-    width: 140px;
+    width: 60px;
     padding: 10px 10px;
   }
   
@@ -64,19 +73,17 @@
     color: rgb(95, 94, 94);
   }
   
-  .chatSupport p{
+  .chatSupport p, h3 {
     text-align: center;
+  }
+
+  .chatSupport h3 {
+    font-family: Poppins, sans-serif;
+    font-size: 20px;
+    
   }
   
   .chatSupport {
-    border: 1px solid #8c92e0;
+    border-top: 1px solid var(--Neutral-100);
   }
   
-  .dashboard_main_container {
-    /* margin-left: 180px; */
-    width: 100%;
-    height: 100dvh;
-    float:right;
-    grid-column: 2;
-    background-color: var(--Neutral-100);
-  }
