--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -103,22 +103,39 @@
     background-color: white;
     border-radius: 10px;
     width: 352px;
-    height: 392px;
+    max-height: 392px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    padding: 15px;
+}
+
+.accounts::-webkit-scrollbar {
+    width: 6px;
+}
+
+.accounts::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+}
+
+.accounts::-webkit-scrollbar-thumb:hover {
+    background-color: #9a81c9;
+}
+
+.accounts::-webkit-scrollbar-track {
+    background-color: #ab9cdf;
 }
 
 .transactions {
     background-color: white;
-    border-radius: 10px;
+    border-radius: 12px;
     width: 608px;
-    display: flex;
-    flex-direction: column;
     max-height: 392px;
-    overflow-y: scroll;
-    padding: 15px;
-    
+    justify-content: space-between;
 }
 
-.transactions::-webkit-scrollbar {
+/* .transactions::-webkit-scrollbar {
     width: 6px;
 }
 .transactions::-webkit-scrollbar-thumb {
@@ -129,12 +146,18 @@
     background-color: #9a81c9;
 }
 .transactions::-webkit-scrollbar-track {
-    background-color: #ab9cdf; /* Background color of the track */
-  }
+    background-color: #ab9cdf; /* Background color of the track 
+  } */
 
 .taheader {
     background-color: #DBEAFD;
     height: 100px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
+    font-size: 22px;
+    padding: 12px;
 }
 
 .transactions img {
