--- a/src/components/transactions.module.css
+++ b/src/components/transactions.module.css
@@ -1,11 +1,55 @@
+
+.transaction_container {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    overflow-y: scroll;
+    max-height: 292px;
+}
+
+.transaction_container::-webkit-scrollbar {
+    width: 6px;
+}
+.transaction_container::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+}
+.transaction_container::-webkit-scrollbar-thumb:hover {
+    background-color: #9a81c9;
+}
+.transaction_container::-webkit-scrollbar-track {
+    background-color: #ab9cdf; /* Background color of the track */
+  }
+
+
 .transactions img {
     width: 30px;
     height: 30px;
     border-radius: 100%;
+    margin: 0 10px;
 }
 
 .transactions p {
     font-family: Poppins, sans-serif;
     font-size: 18px;
     font-weight: 500;
+}
+
+.transactions {
+    display: flex;
+    align-items: center;
+    align-content: center;
+}
+
+.date {
+    padding: 5px;
+}
+
+.amount {
+    align-self: center;
+    margin-left: auto;
+}
+
+.name {
+    margin-left: 12px;
 }
