--- a/src/components/transactions.module.css
+++ b/src/components/transactions.module.css
@@ -18,7 +18,7 @@
     background-color: #9a81c9;
 }
 .transaction_container::-webkit-scrollbar-track {
-    background-color: #ab9cdf; /* Background color of the track */
+    background-color: #ab9cdf; 
   }
 
 
