--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -1,6 +1,4 @@
-/* .container {
-    box-sizing: inherit;
-} */
+
 .dashboard {
     display: flex;
     grid-template-columns: 300px 3fr;
@@ -74,20 +72,26 @@
     box-sizing: border-box;
 }
 
-/* .row_2 {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 20px;
-} */
-
 .budget_chart {
-
-    padding: 20px;
     border-radius: 10px;
-    background-color: white;
     width: 736px;
-    height: 431px;
-    margin: 0 16px;
+    height: 400px;
+    gap: 0;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.budg_header {
+    position: relative;
+    width: 725px;
+    z-index: 100;
+}
+
+.chart_image {
+    width: 750px;
+    top: 0;
+    height: 350px;
 }
 
 .account_wrapper {
@@ -134,20 +138,6 @@
     max-height: 392px;
     justify-content: space-between;
 }
-
-/* .transactions::-webkit-scrollbar {
-    width: 6px;
-}
-.transactions::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 10px;
-}
-.transactions::-webkit-scrollbar-thumb:hover {
-    background-color: #9a81c9;
-}
-.transactions::-webkit-scrollbar-track {
-    background-color: #ab9cdf; /* Background color of the track 
-  } */
 
 .taheader {
     background-color: #DBEAFD;
