--- a/src/components/landing/styles/Features.module.css
+++ b/src/components/landing/styles/Features.module.css
@@ -21,6 +21,7 @@
     border-radius: 10px;
     max-width: 300px;
     text-align: center;
+    font-family: Poppins, sans-serif;
   }
   
   .card img {
