--- a/src/components/landing/styles/Hero.module.css
+++ b/src/components/landing/styles/Hero.module.css
@@ -3,7 +3,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 50px;
+    padding-right: 0px;
+    padding-left: 100px;
     background-color: #f5f7fa;
+    font-family: Poppins, sans-serif;
   }
   
   .content {
@@ -23,7 +26,7 @@
   .cta {
     background-color: #6A63E1;
     color: #fff;
-    padding: 15px 30px;
+    padding: 12px 25px;
     text-decoration: none;
     border-radius: 5px;
   }
