--- a/src/components/accounts/Accounts.module.css
+++ b/src/components/accounts/Accounts.module.css
@@ -1,9 +1,34 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+.institutions {
+    font-family: Poppins, sans-serif;
+}
+
+.ins_name {
+    font-weight: 600;
+    font-size: 20px;
+    background-color: red;
+    border-radius:8px;
+    color: white;
+    padding: 5px;
+    width: 70%;
+}
 
 .selectedAccount {
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
+    color: blueviolet;
+    text-shadow: 0.5px 0.5px 0.5px blueviolet, 0 0 0 blue, 0 0 0.2em blue;
+    list-style: inside;
+}
 
+.account:hover {
+    color: blueviolet;
+    text-shadow: 0.5px 0.5px 0.5px rgb(107, 151, 202), 0 0 0 blue, 0 0 0.2em blue;
 }
 
 .account {
-    
+    list-style: none;
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
 }
