change background color for account

--- a/src/components/accounts/Accounts.module.css
+++ b/src/components/accounts/Accounts.module.css
@@ -7,7 +7,7 @@
 .ins_name {
     font-weight: 600;
     font-size: 20px;
-    background-color: red;
+    background-color: rgb(230, 52, 126);
     border-radius:8px;
     color: white;
     padding: 5px;
