--- a/src/index.css
+++ b/src/index.css
@@ -289,3 +289,12 @@
   padding: 5px 10px;
   background-color: #4F46E5;
 }
+
+
+/* Chart CSS */
+
+.chart-container {
+  display: block;
+  height: 500px;
+  
+}
