--- a/src/index.css
+++ b/src/index.css
@@ -295,6 +295,8 @@
 
 .chart-container {
   display: block;
-  height: 500px;
-  
+  height: 350px;
+  overflow: visible;
+  color: black;
+  width: 70%;
 }
