--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -94,13 +94,15 @@
 
 .budget_chart {
     border-radius: 10px;
-    width: 736px;
-    height: 400px;
-    gap: 0;
+    width: 720px;
+    height: 430px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     position: relative;
-    z-index: 200;
+    background-color: white;
+    justify-content: start;
+    gap: 20px;
+    margin-left: 18px;
 }
 
 .budg_header {
@@ -142,25 +144,6 @@
     max-height: 392px;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
-    padding: 15px;
-}
-
-.accounts::-webkit-scrollbar {
-    width: 6px;
-}
-
-.accounts::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 10px;
-}
-
-.accounts::-webkit-scrollbar-thumb:hover {
-    background-color: #9a81c9;
-}
-
-.accounts::-webkit-scrollbar-track {
-    background-color: #ab9cdf;
 }
 
 .transactions {
@@ -203,3 +186,27 @@
     font-size: 18px;
     font-weight: 500;
 }
+
+.account_header {
+    background: #B598DB;
+    height: 100px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    font-family: Poppins, sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+    padding: 12px;
+}
+
+.dropdown_chart {
+    background-color: #888;
+    border-radius: 8px;
+    width: 8em;
+    height: min-content;
+}
+
+.dropdown_container {
+    display: flex;
+    align-items: center;
+}
+
