--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -75,7 +75,6 @@
     box-sizing: border-box;
     border-radius: 10px;
     margin: 0 16px;
-    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1400px) {
@@ -101,8 +100,8 @@
     position: relative;
     background-color: white;
     justify-content: start;
-    gap: 20px;
     margin-left: 18px;
+    box-sizing: border-box;
 }
 
 .budg_header {
@@ -162,17 +161,26 @@
     font-family: Poppins, sans-serif;
     font-weight: 600;
     font-size: 22px;
-    padding: 12px;
+    padding: 26px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .dropdown_date {
+    display: flex;
     background-color: #888;
     border-radius: 8px;
+    width: 7em;
+    height: 1.5em;
 }
 
 .taheader h3 {
-    font-weight: 500;
+    display: flex;
+    font-size: 14px;
+    font-weight: 400;
     font-family: Poppins, sans-serif;
+    text-transform: uppercase;
+    
 }
 
 .transactions img {
@@ -195,7 +203,15 @@
     font-family: Poppins, sans-serif;
     font-weight: 600;
     font-size: 22px;
-    padding: 12px;
+    padding: 26px;
+}
+
+.account_header h3 {
+    display: flex;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    text-transform: uppercase;
 }
 
 .dropdown_chart {
@@ -206,7 +222,9 @@
 }
 
 .dropdown_container {
-    display: flex;
-    align-items: center;
+    display: block;
+    box-sizing: border-box;
+    padding-top: 3em;
+    padding-right: 5px;
 }
 
