--- a/src/components/accounts/Accounts.module.css
+++ b/src/components/accounts/Accounts.module.css
@@ -10,7 +10,7 @@
     background-color: var(--Primary-200, #C7D2FE);
     border-radius:8px;
     color: #4F46E5;
-    padding: 5px;
+    padding:10px 20px;
     width: 70%;
 }
 
@@ -35,9 +35,9 @@
 }
 
 .account_container {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
     overflow-y: scroll;
     max-height: 292px;
 }
