--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -1,156 +1,166 @@
-
 .dashboard {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
     display: flex;
-    grid-template-columns: 300px 3fr;
-    gap: 20px;
+    background-color: #F3F3F6;
 }
 
 .main__container {
-    display:grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 150px 450px 400px;
-    gap: 20px;
-    padding: 20px;
-    background-color: var(--Neutral-100);
-    justify-content: center;
-    align-items: start;
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(3, minmax(225px, 300px)) minmax(250px, 600px);
+    grid-template-rows: minmax(150px, 200px) minmax(400px, 4fr) 3fr;
+    column-gap: 20px;
+    row-gap: 20px;
+    height: 100vh;
 }
 
 .sidebar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-@media screen and (max-width: 1056px) {
-    .sidebar {
-        display: none;
-    }
-}
-
-.summary_cards {
-    grid-column: span 12;
-    display: flex;
-    justify-content: start;
-    grid-template-columns: repeat(12, 1fr);
-}
-
-.balance {
-    grid-column: span 3;
-    width: 224px;
-    height: 150px;
-    background-color: white;
-    border-radius: 10px;
-    margin: 0 16px;
-    box-sizing: border-box;
-}
-
-.income {
-    grid-column: span 3;
-    width: 224px;
-    height: 150px;
-    background-color: white;
-    border-radius: 10px;
-    margin: 0 16px;
-    box-sizing: border-box;
-}
-
-.expenses {
-    grid-column: span 3;
-    width: 224px;
-    height: 150px;
-    background-color: white;
-    border-radius: 10px;
-    margin: 0 16px;
-    box-sizing: border-box;
-}
-
-.saving__plan {
-    grid-column: span 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    background-color: white;
-    width: 478px;
-    height: 600px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    margin: 0 16px;
-}
-
-@media screen and (max-width: 1400px) {
-    .saving__plan {
-        width: 350px;
-        height: 500px;
-    }
-}
-
-@media screen and (max-width: 1250px) {
-    .saving__plan {
-        width: 250px;
-        height: 500px;
-    }
+    position:sticky;
+    margin-right: 20px;
 }
 
 .budget_chart {
-    border-radius: 10px;
-    width: 720px;
-    height: 430px;
-    display: flex;
-    flex-direction: row-reverse;
-    position: relative;
-    background-color: white;
-    justify-content: start;
-    margin-left: 18px;
+    grid-row: 2;
+    grid-column: 1 / 4;
+    display:flex;
+    flex-direction: column;
     box-sizing: border-box;
-}
-
-.budg_header {
-    position: relative;
-    width: 100%;
-}
-
-.chart_image {
-    width: 100%;
-    top: 0;
-    height: 350px;
-}
-
-@media screen and (max-width: 1550px) {
-    .budget_chart {
-        width: 650px;
-    }
-}
-
-@media screen and (max-width: 1450px) {
-    .budget_chart {
-        width: 550px;
-    }
-}
-
-.account_wrapper {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column: span 12;
-    gap: 20px;
-    padding: 20px;
-}
-
-
-.accounts {
+    align-content:flex-start;
+    justify-content: start;
+    padding-bottom: 80px;
     background-color: white;
-    border-radius: 10px;
-    width: 352px;
-    max-height: 392px;
+    border-radius: 12px;
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+    text-align: center;
+}
+
+.budget_header {
+    display: flex;
+    height: 100px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    font-family: Poppins, sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+    padding: 20px;
+    align-items: start;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    border-bottom: 3px solid #F3F4F6;
+}
+
+.saving__plan {
+    grid-column: 4;
+    grid-row: 1 / 3;
+}
+
+/* .dropdown_chart {
+    display: flex;
+    height: 2em;
+    width: 7em;
+    align-content: center;
+    background-color: #C7D2FE;
+} */
+
+.bottom_container {
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-column: 1 / 5;
+    column-gap: 20px;
+}
+
+.dropdown_container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.dropdown_chart {
+    background-color: #C7D2FE;
+    color: #4F46E5;
+    border-radius: 8px;
+    width: 8em;
+    height: min-content;
+}
+
+.dropdown_date {
+    background-color: #C7D2FE;
+    color: #4F46E5;
+    border-radius: 8px;
+    width: 8em;
+    height: min-content;
+}
+
+.balance {
     display: flex;
     flex-direction: column;
+    padding: 20px;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+    text-align: start;
+    justify-content: space-between;
+    line-height: normal;
+}
+
+.text_container p {
+    margin: 0;
+}
+
+.income {
+    padding: 20px;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.expenses {
+    padding: 20px;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.saving__plan {
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+}
+
+.accounts {
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+    
+}
+
+.imgcontainer {
+    border-radius: 12px;
+    background: rgba(181, 152, 219, 0.20);
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+    padding: 18px;
+    align-items: center;
+    align-content: center;
+}
+
+.imgcontainer > div {
+    display: flex;
+    justify-content: center;
 }
 
 .transactions {
-    background-color: white;
     border-radius: 12px;
-    width: 608px;
-    max-height: 392px;
-    justify-content: space-between;
+    background-color: white;
+    box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
 }
 
 .taheader {
@@ -166,36 +176,8 @@
     justify-content: space-between;
 }
 
-.dropdown_date {
-    display: flex;
-    background-color: #888;
-    border-radius: 8px;
-    width: 7em;
-    height: 1.5em;
-}
-
-.taheader h3 {
-    display: flex;
-    font-size: 14px;
-    font-weight: 400;
-    font-family: Poppins, sans-serif;
-    text-transform: uppercase;
-    
-}
-
-.transactions img {
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-}
-
-.transactions p {
-    font-family: Poppins, sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-}
-
 .account_header {
+    display: flex;
     background: #B598DB;
     height: 100px;
     border-top-left-radius: 12px;
@@ -203,28 +185,34 @@
     font-family: Poppins, sans-serif;
     font-weight: 600;
     font-size: 22px;
-    padding: 26px;
+    padding: 20px;
+    align-items: start;
+    flex-direction: column;
 }
 
-.account_header h3 {
-    display: flex;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    text-transform: uppercase;
+.icon1 {
+    background-color: #FFF2E5;
+    padding: .5em;
+    width: 44px;
+    border-radius: 100%;
 }
 
-.dropdown_chart {
-    background-color: #888;
-    border-radius: 8px;
-    width: 8em;
-    height: min-content;
+.icon2 {
+    background-color: rgba(79, 70, 229, 0.20);
+    width: 44px;
+    border-radius: 100%;
+    padding: .5em;
 }
 
-.dropdown_container {
-    display: block;
-    box-sizing: border-box;
-    padding-top: 3em;
-    padding-right: 5px;
+.icon3 {
+    background-color: #FFEBEA;
+    width: 44px;
+    border-radius: 100%;
+    padding: .5em;
 }
 
+@media screen and (max-width: 1056px) {
+    .sidebar {
+        display: none;
+    }
+}
