--- a/src/components/accounts/Accounts.module.css
+++ b/src/components/accounts/Accounts.module.css
@@ -35,11 +35,9 @@
 }
 
 .account_container {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
+    padding: 20px;
     overflow-y: scroll;
-    max-height: 292px;
+    max-height: 300px;
 }
 
 .account_container::-webkit-scrollbar {
