--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -12,7 +12,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(3, minmax(225px, 300px)) minmax(250px, 600px);
-    grid-template-rows: minmax(150px, 200px) minmax(400px, 4fr) 3fr;
+    grid-template-rows: minmax(150px, 200px) minmax(400px, 560px) minmax(250px, 300px);
     column-gap: 20px;
     row-gap: 20px;
     height: 100vh;
@@ -140,7 +140,7 @@
     border-radius: 12px;
     background-color: white;
     box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
-    
+    padding-bottom: 20px;
 }
 
 .imgcontainer {
