--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -12,14 +12,13 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(3, minmax(225px, 300px)) minmax(250px, 600px);
-    grid-template-rows: minmax(150px, 200px) minmax(400px, 560px) minmax(250px, 300px);
+    grid-template-rows: minmax(150px, 200px) minmax(400px, 560px) minmax(300px, 400px);
     column-gap: 20px;
     row-gap: 20px;
-    height: 100vh;
+    height: 98lvh;
 }
 
 .sidebar {
-    position:sticky;
     margin-right: 20px;
 }
 
@@ -71,6 +70,7 @@
     grid-template-columns: 1fr 2fr 2fr;
     grid-column: 1 / 5;
     column-gap: 20px;
+    max-height: 300px;
 }
 
 .dropdown_container {
