--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -108,6 +108,10 @@
     border-top: 1px solid var(--Neutral-100);
     padding-top: 10px;
     padding-bottom: 20px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    
   }
   
   #icon:focus {
