--- a/src/components/forms/savingplanform/SavingsPlanForm.module.css
+++ b/src/components/forms/savingplanform/SavingsPlanForm.module.css
@@ -36,31 +36,51 @@
     align-self: stretch;
 }
 
-.input {
-    border-radius: 8px;
-    background-color: white;
-    height: 40px;
-    padding: 8px 12px;
-    align-items: center;
-    gap: 12px;
-    align-self: stretch;
-    border: 1px solid var(--Neutral-200, #E5E7EB);
-    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.04), 0px 1px 2px 0px rgba(16, 24, 40, 0.04);
-}
-
 .form_input2 {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    align-self: stretch;
+}
+
+#form_amount {
+    display: flex;
+    width: 100%;
+    height: 44px;
+    border: 1px solid var(--Neutral-200, #E5E7EB);
+    border-radius: 8px;
+    grid-column: 1;
+}
+
+.dollar_amount {
+    place-self: center;
+    height: 1.3em;
+    width: 15%;
+}
+
+.form_container2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 20px;
+    width: 100%;
+}
+
+.input {
+    grid-column: 1;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.04), 0px 1px 2px 0px rgba(16, 24, 40, 0.04);
+    border: 1px solid var(--Neutral-200, #E5E7EB);
+    width: 100%;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    color: black;
+    padding-left: .7em;
 }
 
 .form_input3 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 25px 50px;
-    column-gap: 40px;
+    column-gap: 20px;
     width: 100%;
 }
 
@@ -69,9 +89,11 @@
 }
 
 .form_label4 {
-    grid-column: 2;
-    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
+
 .input3 {
     grid-column: 1;
     border-radius: 8px;
@@ -114,9 +136,10 @@
 .amount_form {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 44px;
     border: 1px solid var(--Neutral-200, #E5E7EB);
     border-radius: 8px;
+    grid-column: 1;
 }
 
 .dollar {
@@ -127,33 +150,63 @@
 }
 
 .date_input {
-    display: flex;
+    border-radius: 8px;
     background-color: white;
+    height: 40px;
+    padding: 8px 16px;
+    align-items: center;
+    align-self: stretch;
     border: 1px solid var(--Neutral-200, #E5E7EB);
-    height: 50px;
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.04), 0px 1px 2px 0px rgba(16, 24, 40, 0.04);
+    width: 100%;
     color: black;
-    padding-left: .7em;
-    width: 17.4em;
-    overflow: hidden;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
 }
 
 .date_form {
-    height: 100%;
     display: flex;
-    color: black;
     width: 100%;
-    border: 1px solid var(--Neutral-200, #E5E7EB);
-    border-radius: 8px;
+    justify-content: start;
+    flex-direction: column;
+
 }
 
 .calendar {
     height: 1.3em;
-    width: 20%;
     place-self: center;
 }
 
 .btn_accounts:hover {
     background: #5a54dd;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+
+.calendar_container > div {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.calendar_classname {
+    justify-self: end;
+}
+
+.dropdown_freq {
+    background-color: white;
+    color: black;
+    width: 100%;
+    height: 44px;
+    border-radius: 8px;
+    border: 1px solid var(--Neutral-200, #E5E7EB);
+    
+}
+
+.recurring {
+    grid-column: 2;
+    grid-row: 1;
 }
