--- a/src/components/landing/styles/HowItWorks.module.css
+++ b/src/components/landing/styles/HowItWorks.module.css
@@ -46,3 +46,29 @@
   font-weight: 500;
   font-family: Poppins, sans-serif;
 }
+
+@media (max-width: 430px) {
+  .how_it_works_container {
+    padding: 20px;
+  }
+
+  .how_it_works_text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .how_it_works_text > h2 {
+    text-align: center;
+  }
+
+  .how_it_works_text, .get_started {
+    place-items: center;
+    border-radius: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .how_it_works_text {
+    padding-right: 20px;
+  }
+}
