--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -31,7 +31,9 @@
     box-sizing: border-box;
     align-content:flex-start;
     justify-content: start;
-    padding-bottom: 80px;
+    padding-top: .8em;
+    padding-left: 1em;
+    padding-bottom: 60px;
     background-color: white;
     border-radius: 12px;
     box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
@@ -53,10 +55,14 @@
     border-bottom: 3px solid #F3F4F6;
 }
 
+.chart__container {
+    height: 100%;
+
+}
+
 .saving__plan {
     grid-column: 4;
     grid-row: 1 / 3;
-    overflow-y: scroll;
 }
 
 /* .dropdown_chart {
@@ -78,6 +84,7 @@
 .dropdown_container {
     display: flex;
     justify-content: space-between;
+    z-index: 200;
 }
 
 .dropdown_chart {
