--- a/src/index.css
+++ b/src/index.css
@@ -300,7 +300,12 @@
   width: 80%;
   font-family: Poppins, sans-serif;
   box-sizing: border-box;
-  height: 80%;
+  height: 100%;
+  place-content: center;
+}
+
+.chart-container > h3 {
+  font-weight:700;
 }
 
 .barchart-container {
@@ -323,7 +328,7 @@
 .piechart-container {
   display: flex;
   width: 80%;
-  height: 80%;
+  height: 100%;
   flex-direction: column;
   font-family: Poppins, sans-serif;
 }
