--- a/src/components/budgetList/BudgetListDisplay.module.css
+++ b/src/components/budgetList/BudgetListDisplay.module.css
@@ -13,3 +13,17 @@
 .delete_btn:hover {
     background-color: rgba(235, 52, 137, 0.8);
 }
+
+.accordion {
+    display: flex;
+    opacity: 90%;
+    flex-direction: column;
+    position: absolute;
+    width: 100%;
+    padding: 6px;
+    z-index: 1000;
+}
+
+.accordion_header {
+    overflow: hidden;
+}
