--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     display: flex;
     background-color: #F3F3F6;
+    z-index: -10;
 }
 
 .main__container {
@@ -16,6 +17,7 @@
     column-gap: 20px;
     row-gap: 20px;
     height: 98lvh;
+    z-index: 5;
 }
 
 .sidebar {
@@ -33,11 +35,11 @@
     justify-content: start;
     padding-top: .8em;
     padding-left: 1em;
-    padding-bottom: 60px;
     background-color: white;
     border-radius: 12px;
     box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
     text-align: center;
+    overflow: hidden;
 }
 
 .budget_header {
@@ -57,7 +59,6 @@
 
 .chart__container {
     height: 100%;
-
 }
 
 .saving__plan {
@@ -142,7 +143,7 @@
     position: relative;
     transform-style: preserve-3d;
 }
-
+.text_container::before,
 .text_container::after {
     content: "";
     position: absolute;
@@ -152,7 +153,7 @@
     border-radius: inherit;
 }
 
-.balance_p {
+/* .balance_p {
     position: relative;
     transform-style: preserve-3d;
 }
@@ -162,7 +163,7 @@
     position: absolute;
     inset: 1rem;
     transform: translateZ(100px);
-}
+} */
 
 .income {
     padding: 20px;
@@ -185,9 +186,21 @@
 }
 
 .saving__plan {
+    display: block;
     border-radius: 12px;
-    background-color: white;
     box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08), 0px 6px 15px -2px rgba(16, 24, 40, 0.08);
+    position: relative;
+    background: linear-gradient(-45deg, #B598DB, #C7D2FE);
+    place-content: center;
+    opacity: 90%;
+}
+
+.pig_watermark {
+    opacity: 20%;
+    background: transparent;
+    padding: 40px;
+    width: 100%;
+    height: 100%;
 }
 
 .accounts {
@@ -273,19 +286,59 @@
 
 @media screen and (max-width: 1056px) {
     .sidebar {
-        display: none;
+        position:fixed;
+        width: 100vw;
     }
 }
 
 @media screen and (max-width: 768px) {
     .dashboard {
-        grid-template-columns: 1fr;
         grid-gap: 10px;
-        padding: 10px;
+        padding-top: 0;
+        padding-bottom: 10px;
+        padding-left: 0;
+    }
+
+    .main__container {
+        padding-top: 150px;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding-left: 20px;
+    }
+
+    .bottom_container {
+        display: flex;
+        flex-wrap: wrap;
+        max-height: 1200px;
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    .budget_chart {
+        height: 500px;
+    }
+
+    .budget_header {
+        min-height: auto;
     }
 
     .dashboard-item {
         margin-bottom: 20px;
+    }
+
+    .sidebar {
+        display: flex;
+        position:fixed;
+        margin: 0;
+    }
+
+    .income, .expenses {
+        display: none;
+    }
+
+    .accounts {
+        margin: 20px 0;
     }
 }
 
